--- a/verifyertms.tex
+++ b/verifyertms.tex
@@ -284,5 +284,5 @@ Currently the track is closed and trains are capable of looping round the track 
 \end{comment}
 It is highly desirable to be able to verify properties about the energy consumption of the ERTMS and tradition railway control systems and prove that the former is more efficient than the later. It is also desirable to verify properties of the systems performance in a similar fashion; our current model provides a framework for this.
 
-The next challenge would be to verify  some real world track layouts as would be controlled by the ERTMS system on its implementation. This would require further removal non-determinism from the models and a more general approach to modelling the railway interlocking. A summer project student at Swansea University has successfully modelled an interlocking, which acts an ladder logic interpreter, and executes a ladder logic program.
+The next challenge would be to verify  some real world track layouts as would be controlled by the ERTMS system on its implementation. This would require further removal non-determinism from the models and a more general approach to modelling the railway interlocking. A summer project student at Swansea University has successfully modelled an interlocking, which acts an ladder logic interpreter, and executes a ladder logic program. This could be integrated with our model and would allow for a general approach to model tracks, rather than having to model each interlocking by hand.
 
